--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -1,3 +1,6 @@
+.work {
+  visibility: hidden;
+}
 .w-picture-work {
   width: 50%;
   overflow: hidden;
